working display with babylonjs

--- a/bwapp/private/i18n/en.json
+++ b/bwapp/private/i18n/en.json
@@ -13,6 +13,7 @@
       "HEADER": "Main Navigation"
     },
     "nav": {
+      "WORLDVIEW": "World View",
       "SINGLEVIEW": "Single View",
       "menu": {
         "MENU": "Menu",
